@@ -1385,77 +1385,15 @@ else
 
 fi
 
-if [ "${with_dynamic_modules}" != no ]; then
-  # Support for dynamic loading. Taken from libtool's ltconfig.in.
-  if [ $XCC_GCC = true ] ; then
-    case "$host_os" in
-      irix5* | irix6* | cygwin*)
-        # PIC is the default for these OSes.
-        XCC_PICFLAG=''
-        ;;
-      *)
-        XCC_PICFLAG='-fPIC'
-        ;;
-    esac
-  else
-    case "$host_os" in
-      sco3.2v5*)
-        XCC_PICFLAG='-Kpic'
-        ;;
-      solaris2*)
-        XCC_PICFLAG='-KPIC'
-        ;;
-      sunos4*)
-        XCC_PICFLAG='-PIC'
-        ;;
-    esac
-  fi
-  case "$cpu" in
-    alpha | rs6000)
-      # All code for these CPUs is position-independent.
-      XCC_PICFLAG=''
-      ;;
-  esac
-  XCC_CREATESHARED='create-shared-lib -o $lib $libs' # dummy command
-  case "$host_os" in
-    freebsd2.2*)
-      XCC_CREATESHARED='ld -Bshareable -o $lib $libs /usr/lib/c++rt0.o'
-      ;;
-    freebsd2* | netbsd* | openbsd*)
-      XCC_CREATESHARED='ld -Bshareable -o $lib $libs'
-      ;;
-    freebsd3* | gnu* | linux* | cygwin* | mingw* | k*bsd* | dragonfly*)
-      XCC_CREATESHARED='${CC} ${CFLAGS} ${CLFLAGS} -shared -o $lib $libs'
-      ;;
-    hpux9* | hpux10*)
-      XCC_CREATESHARED='ld -b +s -o $lib $libs'
-      ;;
-    irix5* | irix6*)
-      case " $CC $CFLAGS " in
-        *" -32 "*)  XCC_CREATESHARED='ld -32 -shared -o $lib $libs' ;;
-        *" -n32 "*) XCC_CREATESHARED='ld -n32 -shared -o $lib $libs' ;;
-        *" -64 "*)  XCC_CREATESHARED='ld -64 -shared -o $lib $libs' ;;
-        *)          XCC_CREATESHARED='ld -shared -o $lib $libs' ;;
-      esac
-      ;;
-    osf3* | osf4*)
-      XCC_CREATESHARED='ld -shared -expect_unresolved -o $lib $libs -lc'
-      ;;
-    sco3.2v5*)
-      XCC_CREATESHARED='ld -G -o $lib $libs'
-      ;;
-    solaris2*)
-      XCC_CREATESHARED='ld -G -z text -o $lib $libs'
-      ;;
-    sunos4*)
-      XCC_CREATESHARED='ld -assert pure-text -Bstatic -o $lib $libs'
-      ;;
-    darwin*)
-      XCC_CREATESHARED='${CC} -bundle -flat_namespace -undefined suppress -o $lib $libs'
-      ;;
-    *) echo "$0: how do you create a shared library on ${host_os}?" >&2;
-      ;;
-  esac
+if [ "${with_dynamic_modules}" != no ]; then # not on msvc
+  # Support for dynamic loading.
+  eval "`./libtool --tag=CC --config | grep '^pic_flag='`"
+  eval XCC_PICFLAG=\"${pic_flag}\"
+  eval "`./libtool --tag=CC --config | grep '^archive_cmds='`"
+  CC='${CC}' libobjs='$libs' deplibs='${CLFLAGS}' compiler_flags='${CFLAGS}' \
+    soname='$lib' lib='$lib' eval XCC_CREATESHARED=\"${archive_cmds}\"
+  test "${verbose}" = true -o "${verbose}" = yes && \
+    echo "XCC_CREATESHARED = ${XCC_CREATESHARED}" >&2
 fi
 
 if [ "$DEBUGGING" = debug ] ; then
